--- a/sm-core/src/main/resources/log4j.properties
+++ b/sm-core/src/main/resources/log4j.properties
@@ -1,12 +1,12 @@
-log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.Stdout=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.Stdout.layout.ConversionPattern=[%d{ISO8601}] %-5p - %-26.26c{1} - %m\n
 
-log4j.rootLogger=WARN,Stdout
+log4j.rootLogger=WARN,stdout,file
 
 
 # hibernate queries
-#log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
 #log4j.logger.org.hibernate.type=INFO
 
 # schema initialization
